feat(repo): pet repo completed, slight changes to api and db folders (#13)
* pet repo completed, slight changes to api and db folders

* added http options to user service

---------
