# pkg/api/gostream/v1/gostream.pb.go
@@ -539,7 +539,8 @@ type UpdateUserRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	User *User `protobuf:"bytes,1,opt,name=user,proto3" json:"user,omitempty"`
+	UserId  uint64 `protobuf:"varint,1,opt,name=user_id,json=userId,proto3" json:"user_id,omitempty"`
+	NewData *User  `protobuf:"bytes,2,opt,name=new_data,json=newData,proto3" json:"new_data,omitempty"`
 }
 
 func (x *UpdateUserRequest) Reset() {
@@ -574,9 +575,16 @@ func (*UpdateUserRequest) Descriptor() ([]byte, []int) {
 	return file_v1_gostream_proto_rawDescGZIP(), []int{8}
 }
 
-func (x *UpdateUserRequest) GetUser() *User {
+func (x *UpdateUserRequest) GetUserId() uint64 {
 	if x != nil {
-		return x.User
+		return x.UserId
+	}
+	return 0
+}
+
+func (x *UpdateUserRequest) GetNewData() *User {
+	if x != nil {
+		return x.NewData
 	}
 	return nil
 }
@@ -1309,12 +1317,14 @@ var file_v1_gostream_proto_rawDesc = []byte{
 	0x2e, 0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x73, 0x65,
 	0x72, 0x52, 0x04, 0x75, 0x73, 0x65, 0x72, 0x22, 0x24, 0x0a, 0x12, 0x43, 0x72, 0x65, 0x61, 0x74,
 	0x65, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x0e, 0x0a,
-	0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x02, 0x69, 0x64, 0x22, 0x48, 0x0a,
+	0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x02, 0x69, 0x64, 0x22, 0x68, 0x0a,
 	0x11, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65,
-	0x73, 0x74, 0x12, 0x33, 0x0a, 0x04, 0x75, 0x73, 0x65, 0x72, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b,
-	0x32, 0x1f, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x6c, 0x6f, 0x72, 0x64, 0x76, 0x69, 0x64, 0x65, 0x78,
-	0x2e, 0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x73, 0x65,
-	0x72, 0x52, 0x04, 0x75, 0x73, 0x65, 0x72, 0x22, 0x14, 0x0a, 0x12, 0x55, 0x70, 0x64, 0x61, 0x74,
+	0x73, 0x74, 0x12, 0x17, 0x0a, 0x07, 0x75, 0x73, 0x65, 0x72, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x04, 0x52, 0x06, 0x75, 0x73, 0x65, 0x72, 0x49, 0x64, 0x12, 0x3a, 0x0a, 0x08, 0x6e,
+	0x65, 0x77, 0x5f, 0x64, 0x61, 0x74, 0x61, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1f, 0x2e,
+	0x63, 0x6f, 0x6d, 0x2e, 0x6c, 0x6f, 0x72, 0x64, 0x76, 0x69, 0x64, 0x65, 0x78, 0x2e, 0x67, 0x6f,
+	0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x73, 0x65, 0x72, 0x52, 0x07,
+	0x6e, 0x65, 0x77, 0x44, 0x61, 0x74, 0x61, 0x22, 0x14, 0x0a, 0x12, 0x55, 0x70, 0x64, 0x61, 0x74,
 	0x65, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x12, 0x0a,
 	0x10, 0x4c, 0x69, 0x73, 0x74, 0x55, 0x73, 0x65, 0x72, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
 	0x74, 0x22, 0x4a, 0x0a, 0x11, 0x4c, 0x69, 0x73, 0x74, 0x55, 0x73, 0x65, 0x72, 0x73, 0x52, 0x65,
@@ -1449,33 +1459,36 @@ var file_v1_gostream_proto_rawDesc = []byte{
 	0x6d, 0x2e, 0x6c, 0x6f, 0x72, 0x64, 0x76, 0x69, 0x64, 0x65, 0x78, 0x2e, 0x67, 0x6f, 0x73, 0x74,
 	0x72, 0x65, 0x61, 0x6d, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x50, 0x65, 0x74, 0x73,
 	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x0c, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x06,
-	0x12, 0x04, 0x2f, 0x70, 0x65, 0x74, 0x32, 0xd1, 0x02, 0x0a, 0x0b, 0x55, 0x73, 0x65, 0x72, 0x53,
-	0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x6b, 0x0a, 0x0a, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65,
+	0x12, 0x04, 0x2f, 0x70, 0x65, 0x74, 0x32, 0x88, 0x03, 0x0a, 0x0b, 0x55, 0x73, 0x65, 0x72, 0x53,
+	0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x7b, 0x0a, 0x0a, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65,
 	0x55, 0x73, 0x65, 0x72, 0x12, 0x2c, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x6c, 0x6f, 0x72, 0x64, 0x76,
 	0x69, 0x64, 0x65, 0x78, 0x2e, 0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2e, 0x76, 0x31,
 	0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65,
 	0x73, 0x74, 0x1a, 0x2d, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x6c, 0x6f, 0x72, 0x64, 0x76, 0x69, 0x64,
 	0x65, 0x78, 0x2e, 0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2e, 0x76, 0x31, 0x2e, 0x43,
 	0x72, 0x65, 0x61, 0x74, 0x65, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
-	0x65, 0x22, 0x00, 0x12, 0x6b, 0x0a, 0x0a, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x55, 0x73, 0x65,
-	0x72, 0x12, 0x2c, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x6c, 0x6f, 0x72, 0x64, 0x76, 0x69, 0x64, 0x65,
-	0x78, 0x2e, 0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x70,
-	0x64, 0x61, 0x74, 0x65, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
-	0x2d, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x6c, 0x6f, 0x72, 0x64, 0x76, 0x69, 0x64, 0x65, 0x78, 0x2e,
-	0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x70, 0x64, 0x61,
-	0x74, 0x65, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00,
-	0x12, 0x68, 0x0a, 0x09, 0x4c, 0x69, 0x73, 0x74, 0x55, 0x73, 0x65, 0x72, 0x73, 0x12, 0x2b, 0x2e,
-	0x63, 0x6f, 0x6d, 0x2e, 0x6c, 0x6f, 0x72, 0x64, 0x76, 0x69, 0x64, 0x65, 0x78, 0x2e, 0x67, 0x6f,
-	0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x55, 0x73,
-	0x65, 0x72, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x2c, 0x2e, 0x63, 0x6f, 0x6d,
-	0x2e, 0x6c, 0x6f, 0x72, 0x64, 0x76, 0x69, 0x64, 0x65, 0x78, 0x2e, 0x67, 0x6f, 0x73, 0x74, 0x72,
-	0x65, 0x61, 0x6d, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x55, 0x73, 0x65, 0x72, 0x73,
-	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x42, 0x3e, 0x5a, 0x3c, 0x67, 0x69,
-	0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6c, 0x6f, 0x72, 0x64, 0x76, 0x69, 0x64,
-	0x65, 0x78, 0x2f, 0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2f, 0x70, 0x6b, 0x67, 0x2f,
-	0x61, 0x70, 0x69, 0x2f, 0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2f, 0x76, 0x31, 0x3b,
-	0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74,
-	0x6f, 0x33,
+	0x65, 0x22, 0x10, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0a, 0x22, 0x05, 0x2f, 0x75, 0x73, 0x65, 0x72,
+	0x3a, 0x01, 0x2a, 0x12, 0x84, 0x01, 0x0a, 0x0a, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x55, 0x73,
+	0x65, 0x72, 0x12, 0x2c, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x6c, 0x6f, 0x72, 0x64, 0x76, 0x69, 0x64,
+	0x65, 0x78, 0x2e, 0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2e, 0x76, 0x31, 0x2e, 0x55,
+	0x70, 0x64, 0x61, 0x74, 0x65, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
+	0x1a, 0x2c, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x6c, 0x6f, 0x72, 0x64, 0x76, 0x69, 0x64, 0x65, 0x78,
+	0x2e, 0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x70, 0x64,
+	0x61, 0x74, 0x65, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0x1a,
+	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x14, 0x1a, 0x0f, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x2f, 0x7b, 0x75,
+	0x73, 0x65, 0x72, 0x5f, 0x69, 0x64, 0x7d, 0x3a, 0x01, 0x2a, 0x12, 0x75, 0x0a, 0x09, 0x4c, 0x69,
+	0x73, 0x74, 0x55, 0x73, 0x65, 0x72, 0x73, 0x12, 0x2b, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x6c, 0x6f,
+	0x72, 0x64, 0x76, 0x69, 0x64, 0x65, 0x78, 0x2e, 0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d,
+	0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x55, 0x73, 0x65, 0x72, 0x73, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x1a, 0x2c, 0x2e, 0x63, 0x6f, 0x6d, 0x2e, 0x6c, 0x6f, 0x72, 0x64, 0x76,
+	0x69, 0x64, 0x65, 0x78, 0x2e, 0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2e, 0x76, 0x31,
+	0x2e, 0x4c, 0x69, 0x73, 0x74, 0x55, 0x73, 0x65, 0x72, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
+	0x73, 0x65, 0x22, 0x0d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x07, 0x12, 0x05, 0x2f, 0x75, 0x73, 0x65,
+	0x72, 0x42, 0x3e, 0x5a, 0x3c, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f,
+	0x6c, 0x6f, 0x72, 0x64, 0x76, 0x69, 0x64, 0x65, 0x78, 0x2f, 0x67, 0x6f, 0x73, 0x74, 0x72, 0x65,
+	0x61, 0x6d, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x67, 0x6f, 0x73, 0x74, 0x72,
+	0x65, 0x61, 0x6d, 0x2f, 0x76, 0x31, 0x3b, 0x67, 0x6f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x76,
+	0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -1523,7 +1536,7 @@ var file_v1_gostream_proto_depIdxs = []int32{
 	19, // 1: com.lordvidex.gostream.v1.UpdatePetRequest.new_data:type_name -> com.lordvidex.gostream.v1.Pet
 	19, // 2: com.lordvidex.gostream.v1.ListPetsResponse.pets:type_name -> com.lordvidex.gostream.v1.Pet
 	20, // 3: com.lordvidex.gostream.v1.CreateUserRequest.user:type_name -> com.lordvidex.gostream.v1.User
-	20, // 4: com.lordvidex.gostream.v1.UpdateUserRequest.user:type_name -> com.lordvidex.gostream.v1.User
+	20, // 4: com.lordvidex.gostream.v1.UpdateUserRequest.new_data:type_name -> com.lordvidex.gostream.v1.User
 	20, // 5: com.lordvidex.gostream.v1.ListUsersResponse.users:type_name -> com.lordvidex.gostream.v1.User
 	1,  // 6: com.lordvidex.gostream.v1.WatchRequest.entity:type_name -> com.lordvidex.gostream.v1.Entity
 	0,  // 7: com.lordvidex.gostream.v1.WatchResponse.kind:type_name -> com.lordvidex.gostream.v1.EventKind
@@ -1550,7 +1563,7 @@ var file_v1_gostream_proto_depIdxs = []int32{
 	6,  // 28: com.lordvidex.gostream.v1.PetService.UpdatePet:output_type -> com.lordvidex.gostream.v1.UpdatePetResponse
 	8,  // 29: com.lordvidex.gostream.v1.PetService.ListPets:output_type -> com.lordvidex.gostream.v1.ListPetsResponse
 	10, // 30: com.lordvidex.gostream.v1.UserService.CreateUser:output_type -> com.lordvidex.gostream.v1.CreateUserResponse
-	12, // 31: com.lordvidex.gostream.v1.UserService.UpdateUser:output_type -> com.lordvidex.gostream.v1.UpdateUserResponse
+	11, // 31: com.lordvidex.gostream.v1.UserService.UpdateUser:output_type -> com.lordvidex.gostream.v1.UpdateUserRequest
 	14, // 32: com.lordvidex.gostream.v1.UserService.ListUsers:output_type -> com.lordvidex.gostream.v1.ListUsersResponse
 	25, // [25:33] is the sub-list for method output_type
 	17, // [17:25] is the sub-list for method input_type
